add migrations, refactoring code